Fixed a bug in PopupImplIE that could cause the hidden iframe behind a PopupPanel to be larger than the PopupPanel, resulting in scroll bars on the edge of the browser window if the PopupPanel gets to close.  This issue requires that the user set a border, padding, or margin styling on all iframes, which is possible.
Patch by: jlabanca
Review by: ajr
Issue: 2443



git-svn-id: https://google-web-toolkit.googlecode.com/svn/releases/1.5@3017 8db76d5a-ed1c-0410-87a9-c151d255dfc7

--- a/user/src/com/google/gwt/user/theme/dark/public/gwt/dark/dark_rtl.css
+++ b/user/src/com/google/gwt/user/theme/dark/public/gwt/dark/dark_rtl.css
@@ -29,12 +29,6 @@ body {
 a, a:visited, a:hover {
   color: #ccf;
 }
-iframe {
-  border-top: 2px solid #666;
-  border-left: 2px solid #666;
-  border-right: 2px solid #bbb;
-  border-bottom: 2px solid #bbb;
-}
 
 /**
  * The reference theme can be used to determine when this style sheet has
@@ -206,6 +200,13 @@ html>body .gwt-DialogBox .dialogBottomRight {
 }
 
 .gwt-FileUpload {
+}
+
+.gwt-Frame {
+  border-top: 2px solid #666;
+  border-left: 2px solid #666;
+  border-right: 2px solid #bbb;
+  border-bottom: 2px solid #bbb;
 }
 
 .gwt-HorizontalSplitPanel {
